--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+div[class*="web3modal"] {
+  z-index: 999;
+}
